--- a/.github/workflows/gitpushworkflow.yaml
+++ b/.github/workflows/gitpushworkflow.yaml
@@ -1,34 +1,43 @@
-name: Provision t2.micro EC2
+name: AutomateWorklfow
 on:
     push:
         branches:
             - 'main'
-
 jobs:
-  provision-ec2:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
-          aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
-          aws-region: us-west-2
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
-      - name: Terraform Apply
-        id:   apply
-        env:
-          TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
-        run: |
-        
-          terraform init
-          terraform validate
-          terraform plan 
-          terraform apply -auto-approve
+    terraform_plan:
+        name: 'Plan'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
+                aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
+                aws-region: us-west-2
+
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v1
+
+            - name: Terraform Init
+              run: terraform init
+              
+            - name: Terraform Plan
+              run: terraform plan
+              
+    terraform_apply:
+                  name: 'Apply'
+                  runs-on: ubuntu-latest
+                  needs: terraform_plan
+                  environment:
+                      name: prod-env
+                      # As prod-env required reviewers is `yarash`,
+                      # it will wait for approval from yarash
+                      
+              
+                  steps:
+                  #... checkout, setup, init terraform steps like plan
+                  - name: Terraform Apply
+                    run: terraform apply -auto-approve
