--- a/.github/workflows/gitpushworkflow.yaml
+++ b/.github/workflows/gitpushworkflow.yaml
@@ -50,9 +50,25 @@ jobs:
                       
               
                   steps:
-                  - uses: actions/download-artifact@v4
-                    with:
+                    - name: Checkout
+                      uses: actions/checkout@v2
+
+                    - name: Configure AWS credentials
+                      uses: aws-actions/configure-aws-credentials@v1
+                      with:
+                        aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
+                        aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
+                        aws-region: us-west-2
+
+                    - name: Setup Terraform
+                      uses: hashicorp/setup-terraform@v1
+
+                    - name: Terraform Init
+                      run: terraform init
+                  
+                    - uses: actions/download-artifact@v4
+                      with:
                         name: terraformoutput.tfplan
                   #... checkout, setup, init terraform steps like plan
-                  - name: Terraform Apply
-                    run: terraform apply -auto-approve
+                    - name: Terraform Apply
+                      run: terraform apply -auto-approve
